re PR target/47665 (ICE in trunc_int_for_mode)

PR target/47665
	* combine.c (make_compound_operation): Only change shifts into
	multiplication for SCALAR_INT_MODE_P.

	* gcc.target/i386/pr47665.c: New test.

From-SVN: r170000